sumo/tests/traci/VariableRetrieval/TrafficLight/errors/UnsupportedVariable/testclient.prog
simstep 48 1
getvariable 0xa2 0xff dummy
simstep 49 1
